# hectec

./: .gitignore  Cargo.toml  README.md  example_transactions.csv  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/configure/: layout.tsx  page.tsx
app/expenses/: layout.tsx  page.tsx
app/nav/: nav-links.tsx  sidenav.tsx
app/summary/: page.tsx
app/ui/: acme-logo.tsx
config/: site.ts
src/: input_page.rs  instructions.rs  logger.rs  main.rs  report_page.rs  table_design.rs  transaction.rs  utils.rs
