[package]
name = "hectec"
version = "0.3.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
eyre = "0.6.12"
fakeit = "1.3.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.36", features = [
  "formatting",
  "parsing",
  "macros",
  "serde",
] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
